--- a/scss/blocks/text-img/_text-img-m.scss
+++ b/scss/blocks/text-img/_text-img-m.scss
@@ -1,7 +1,7 @@
 .text-img-wrapper .b-text-img {
   width: 600px;
 
-  &.style-a, &.style-b {
+  &.style-a, &.style-b, &.style-c, &.style-d {
 
     .text {
       float: none;
@@ -13,6 +13,24 @@
       float: none;
       width: 100%;
       text-align: center;
+    }
+  }
+
+  &.style-c {
+
+    .text {
+      border-right: none;
+      border-bottom: 2px #c2c2c2 solid;
+      margin-bottom: 20px;
+
+      .link-view {
+        display: none;
+      }
+    }
+
+    .img {
+      text-align: left;
+      padding-left: 0;
     }
   }
 }
