--- a/scss/blocks/cols/_cols-s.scss
+++ b/scss/blocks/cols/_cols-s.scss
@@ -16,5 +16,13 @@
         }
       }
     }
+
+    &.style-a .col-b p {
+      width: 90%;
+    }
+
+    &.col-one.style-c {
+      display: none;
+    }
   }
 }
