--- a/scss/blocks/text-img/_text-img-m.scss
+++ b/scss/blocks/text-img/_text-img-m.scss
@@ -17,6 +17,10 @@
         float: none;
         width: 100%;
         text-align: center;
+
+        img {
+          width: 100%;
+        }
       }
     }
 
