--- a/scss/forms/contact/_contact-s.scss
+++ b/scss/forms/contact/_contact-s.scss
@@ -31,7 +31,7 @@
     margin-right: 0%;
   }
 
-  .field-your-phone-number {
+  .field-your-phone-number, .field-date-flexible  {
     width: 65%;
   }
 
@@ -45,10 +45,6 @@
     input {
       width: 31%;
     }
-  }
-
-  .field-date-flexible {
-    width: 25%;
   }
 
   .field-preferred-day, .field-preferred-year  {
@@ -68,12 +64,12 @@
   }
 
   .form-type-radio > label {
-    margin-bottom: 15%;
+    margin-bottom: 5%;
   }
 
 
   .field-number-of-guests {
-    width: 25%;
+    width: 70%;
 
     input {
       width: 80% !important;
@@ -81,7 +77,7 @@
   }
 
   .field-budget, .field-budget-for-party {
-    width: 30%;
+    width: 100%;
     margin-top: 2.1%;
 
     label {
@@ -162,7 +158,7 @@
   }
 
   .field-captcha {
-    width: 60%;
+    width: 100%;
     margin: 0 auto;
 
     .captcha-img-container {
@@ -174,6 +170,7 @@
     }
 
     .form-item {
+      text-align: center;
       float: none;
     }
   }
