--- a/scss/forms/contact/_contact-s.scss
+++ b/scss/forms/contact/_contact-s.scss
@@ -77,12 +77,12 @@
   }
 
   .field-budget, .field-budget-for-party {
-    width: 100%;
+    width: 80%;
     margin-top: 2.1%;
 
     label {
       float: left;
-      width: 50%;
+      width: 57%;
       margin-top: 4%;
       color: #000;
     }
@@ -103,7 +103,6 @@
     input {
       float: right;
       width: 35% !important;
-
     }
   }
 
@@ -111,7 +110,8 @@
 
     label {
       text-align: right;
-      padding-right: 1.5%;
+      padding-right: 5%;
+      margin-top: 8px;
     }
   }
 
