--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -2614,12 +2614,12 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
     width: 80% !important;
   }
   .form-contact .field-budget, .form-contact .field-budget-for-party {
-    width: 100%;
+    width: 80%;
     margin-top: 2.1%;
   }
   .form-contact .field-budget label, .form-contact .field-budget-for-party label {
     float: left;
-    width: 50%;
+    width: 57%;
     margin-top: 4%;
     color: #000;
   }
@@ -2640,7 +2640,8 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
   }
   .form-contact .field-budget-for-party label {
     text-align: right;
-    padding-right: 1.5%;
+    padding-right: 5%;
+    margin-top: 8px;
   }
   .form-contact .field-budget {
     margin-top: -0.6%;
