--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -1287,6 +1287,7 @@ ul li {
   -webkit-border-radius: 0;
   border-radius: 0 0 25px 25px;
   display: block;
+  width: 100%;
 }
 .b-cols.style-b .col .col-item {
   border: none;
