--- a/scss/blocks/cols/_cols.scss
+++ b/scss/blocks/cols/_cols.scss
@@ -10,44 +10,35 @@
     }
   }
 
-  &.col-two {
+  &.col-two .col {
+    float: left;
+    margin-right: 31px;
+    width: 545px;
 
-    .col {
-      float: left;
-      margin-right: 31px;
-      width: 545px;
-
-      &.col-2 {
-        margin: 0;
-      }
+    &.col-2 {
+      margin: 0;
     }
-
   }
 
-  &.col-three {
+  &.col-three .col {
+    float: left;
+    margin-right: 46px;
+    width: 342px;
 
-    .col {
-      float: left;
-      margin-right: 46px;
-      width: 342px;
+    h3 span {
+      min-width: 186px;
+    }
 
-      h3 {
-        span {
-          min-width: 186px;
-        }
-      }
+    &.col-3 {
+      margin: 0;
+      border: none;
 
-      &.col-3 {
-        margin: 0;
+      .col-item {
         border: none;
+        background: none;
 
-        .col-item {
-          border: none;
-          background: none;
-
-          .col-wrapper {
-            padding: 20px 0;
-          }
+        .col-wrapper {
+          padding: 20px 0;
         }
       }
     }
@@ -62,7 +53,6 @@
       @include border-radius(20px);
       margin-bottom: 30px;
     }
-
   }
 
   &.style-a, &.style-b {
@@ -152,29 +142,24 @@
         }
       }
     }
+
     .col-a, .col-b {
       font-family: arial;
       font-style: italic;
     }
 
-    .col-a {
-
-      p {
-        font-size: 14px;
-        color: #7e7e7e;
-      }
+    .col-a p {
+      font-size: 14px;
+      color: #7e7e7e;
     }
 
-    .col-b {
-
-      p {
-        font-size: 15px;
-        font-weight: bold;
-        text-align: center;
-        margin: 0 auto 20px;
-        width: 60%;
-        color: #666666;
-      }
+    .col-b p {
+      font-size: 15px;
+      font-weight: bold;
+      text-align: center;
+      margin: 0 auto 20px;
+      width: 60%;
+      color: #666666;
     }
 
     .col-c {
@@ -194,7 +179,6 @@
         }
       }
     }
-
   }
 
   &.style-b {
@@ -250,17 +234,14 @@
       @include clearfix();
     }
 
-    .col-item {
-
-      h3 {
-        font-family: montserrat-bold;
-        font-size: 30px;
-        margin: 0 20px;
-        color: #336666;
-        border-bottom: 2px solid #c6c6c6;
-        text-align: center;
-        padding: 5px 0;
-      }
+    .col-item h3 {
+      font-family: montserrat-bold;
+      font-size: 30px;
+      margin: 0 20px;
+      color: #336666;
+      border-bottom: 2px solid #c6c6c6;
+      text-align: center;
+      padding: 5px 0;
     }
   }
 }
