--- a/scss/blocks/gallery-event/_gallery-event.scss
+++ b/scss/blocks/gallery-event/_gallery-event.scss
@@ -12,12 +12,12 @@
       border-bottom: 1px solid #000000;
 
       span {
-      color: #336666;
-      font: normal 30px/45px $voltaire-regular;
-      text-transform: uppercase;
-      display: inline-block;
-      height: 40px;
-      letter-spacing: 4px;
+        color: #336666;
+        font: normal 30px/45px $voltaire-regular;
+        text-transform: uppercase;
+        display: inline-block;
+        height: 40px;
+        letter-spacing: 4px;
       }
     }
 
@@ -35,10 +35,57 @@
       @include clearfix();
       text-align: center;
 
+      .event-one {
+        float: left;
+        width: 100%;
+
+        &:nth-child(2) {
+
+          :nth-child(1),:nth-child(2) {
+            margin-right: 1.5%;
+          }
+        }
+
+      }
+
+      .event-two {
+        float: left;
+
+        &:nth-child(1) {
+          width: 43%;
+        }
+
+        &:nth-child(2) {
+          width: 57%;
+
+          :nth-child(3) {
+            margin-left: 5%;
+            margin-right: 0;
+            margin-top: 9%;
+          }
+        }
+      }
+
+      .event-tree {
+        float: left;
+
+        &:nth-child(1) {
+          width: 64%;
+        }
+
+        &:nth-child(2) {
+          width: 36%;
+
+          :nth-child(1) {
+            margin-bottom: 5%;
+          }
+        }
+      }
+
       img {
         border: 10px solid #fff;
         margin-left: 5px;
-        float: left;
+        display: inline-block;
         margin-bottom: 10px;
       }
     }
