--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -820,6 +820,10 @@ ul li {
   clear: both;
 }
 
+.g {
+  color: #606dbc;
+}
+
 .form-gallery-event {
   width: 45%;
   margin: 0 auto;
@@ -1764,10 +1768,43 @@ h3.wedding {
   overflow: hidden;
   visibility: hidden;
 }
+.b-gallery-event.style-a .img-event-wrapper .event-one {
+  float: left;
+  width: 100%;
+}
+.b-gallery-event.style-a .img-event-wrapper .event-one:nth-child(2) :nth-child(1), .b-gallery-event.style-a .img-event-wrapper .event-one:nth-child(2) :nth-child(2) {
+  margin-right: 1.5%;
+}
+.b-gallery-event.style-a .img-event-wrapper .event-two {
+  float: left;
+}
+.b-gallery-event.style-a .img-event-wrapper .event-two:nth-child(1) {
+  width: 43%;
+}
+.b-gallery-event.style-a .img-event-wrapper .event-two:nth-child(2) {
+  width: 57%;
+}
+.b-gallery-event.style-a .img-event-wrapper .event-two:nth-child(2) :nth-child(3) {
+  margin-left: 5%;
+  margin-right: 0;
+  margin-top: 9%;
+}
+.b-gallery-event.style-a .img-event-wrapper .event-tree {
+  float: left;
+}
+.b-gallery-event.style-a .img-event-wrapper .event-tree:nth-child(1) {
+  width: 64%;
+}
+.b-gallery-event.style-a .img-event-wrapper .event-tree:nth-child(2) {
+  width: 36%;
+}
+.b-gallery-event.style-a .img-event-wrapper .event-tree:nth-child(2) :nth-child(1) {
+  margin-bottom: 5%;
+}
 .b-gallery-event.style-a .img-event-wrapper img {
   border: 10px solid #fff;
   margin-left: 5px;
-  float: left;
+  display: inline-block;
   margin-bottom: 10px;
 }
 
@@ -2933,6 +2970,32 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
   .b-gallery-event.style-a p {
     width: 100%;
   }
+  .b-gallery-event.style-a .img-event-wrapper .event-two {
+    float: left;
+  }
+  .b-gallery-event.style-a .img-event-wrapper .event-two:nth-child(1) {
+    width: 100%;
+  }
+  .b-gallery-event.style-a .img-event-wrapper .event-two:nth-child(2) {
+    width: 100%;
+  }
+  .b-gallery-event.style-a .img-event-wrapper .event-two:nth-child(2) :nth-child(3) {
+    margin-left: 0%;
+    margin-right: 0;
+    margin-top: 0%;
+  }
+  .b-gallery-event.style-a .img-event-wrapper .event-tree {
+    float: left;
+  }
+  .b-gallery-event.style-a .img-event-wrapper .event-tree:nth-child(1) {
+    width: 100%;
+  }
+  .b-gallery-event.style-a .img-event-wrapper .event-tree:nth-child(2) {
+    width: 100%;
+  }
+  .b-gallery-event.style-a .img-event-wrapper .event-tree:nth-child(2) :nth-child(1) {
+    margin-bottom: 0%;
+  }
   .b-gallery-event.style-a .img-event-wrapper img {
     width: 100%;
     float: none;
@@ -3233,6 +3296,32 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
   .b-gallery-event.style-a .img-event-wrapper {
     margin: 0 auto;
     width: 70%;
+  }
+  .b-gallery-event.style-a .img-event-wrapper .event-two {
+    float: left;
+  }
+  .b-gallery-event.style-a .img-event-wrapper .event-two:nth-child(1) {
+    width: 100%;
+  }
+  .b-gallery-event.style-a .img-event-wrapper .event-two:nth-child(2) {
+    width: 100%;
+  }
+  .b-gallery-event.style-a .img-event-wrapper .event-two:nth-child(2) :nth-child(3) {
+    margin-left: 0%;
+    margin-right: 0;
+    margin-top: 0%;
+  }
+  .b-gallery-event.style-a .img-event-wrapper .event-tree {
+    float: left;
+  }
+  .b-gallery-event.style-a .img-event-wrapper .event-tree:nth-child(1) {
+    width: 100%;
+  }
+  .b-gallery-event.style-a .img-event-wrapper .event-tree:nth-child(2) {
+    width: 100%;
+  }
+  .b-gallery-event.style-a .img-event-wrapper .event-tree:nth-child(2) :nth-child(1) {
+    margin-bottom: 0%;
   }
   .b-gallery-event.style-a .img-event-wrapper img {
     width: 100%;
