pravka contact forms 1

--- a/scss/forms/contact/_contact-s.scss
+++ b/scss/forms/contact/_contact-s.scss
@@ -94,7 +94,7 @@
       text-transform: none;
     }
 
-    .dollar {
+    .field-prefix {
       font-size: 15px;
       line-height: 0%;
       vertical-align: bottom;
