--- a/scss/forms/contact/_contact-m.scss
+++ b/scss/forms/contact/_contact-m.scss
@@ -98,7 +98,7 @@
       text-transform: none;
     }
 
-    .dollar {
+    .field-prefix {
       font-size: 15px;
       line-height: 0%;
       vertical-align: bottom;
