--- a/scss/forms/contact/_contact.scss
+++ b/scss/forms/contact/_contact.scss
@@ -111,7 +111,7 @@
       text-transform: none;
     }
 
-    .dollar {
+    .field-prefix {
       font-size: 15px;
       line-height: 0%;
       vertical-align: bottom;
