--- a/scss/common/_settings.scss
+++ b/scss/common/_settings.scss
@@ -6,7 +6,8 @@ $experimental-support-for-svg: true;
 $experimental-support-for-opera: false;
 
 //width
-$width: 1220px;
+/*$width: 1220px;*/
+$width: 1122px;
 $width-tablet: 768px;
 $width-mobile: 480px;
 
