--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -47,6 +47,7 @@
   font-weight: normal;
   font-style: normal;
 }
+/*$width: 1220px;*/
 /*! normalize.css v2.1.3 | MIT License | git.io/normalize */
 /* ==========================================================================
    HTML5 display definitions
@@ -1373,12 +1374,26 @@ ul li {
 
 .text-img-wrapper {
   position: relative;
-  left: 50%;
-  padding-top: 66px;
-  background: url('../images/bg/text-img-bg.jpg') 0% 100%;
+  padding: 66px 0 10px 0;
   margin-bottom: 50px;
-  border-bottom: 2px #c2c2c2 solid;
   margin-top: -50px;
+}
+.text-img-wrapper .b-text-img:before, .text-img-wrapper .gallery-btn-wrapper:before {
+  content: '';
+  width: 4000px;
+  bottom: 0;
+  left: 50%;
+  -moz-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  -webkit-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
+  margin-top: -66px;
+  display: block;
+  height: 100%;
+  position: absolute;
+  background: url('../images/bg/text-img-bg.jpg') 0% 100%;
+  z-index: -1;
+  border-bottom: 2px #c2c2c2 solid;
 }
 .text-img-wrapper .b-text-img {
   margin: 0 auto 20px;
@@ -2983,7 +2998,7 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
     padding-top: 20px;
   }
 }
-@media (min-width: 768px) and (max-width: 1249px) {
+@media (min-width: 768px) and (max-width: 1151px) {
   .form-contact {
     width: 95%;
   }
@@ -3241,9 +3256,9 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
     padding-top: 20px;
   }
 }
-@media (min-width: 1250px) {
+@media (min-width: 1152px) {
   .site-container {
-    width: 1220px;
+    width: 1122px;
   }
 
   .b-cols {
