pravki ot Vani 3

--- a/scss/blocks/tabs/_tabs.scss
+++ b/scss/blocks/tabs/_tabs.scss
@@ -1,6 +1,19 @@
 .b-tabs {
   margin-bottom: 30px;
 
+  h3 {
+    font-family: montserrat-bold;
+    color: #009999;
+    font-size: 35px;
+    text-transform: uppercase;
+    border-bottom: 2px solid #c6c6c6;
+    text-align: center;
+    width: 1122px;
+    margin: -20px auto 50px;
+    letter-spacing: 6px;
+    line-height: 80px;
+  }
+
   .tabs_caption {
     margin: 0 auto;
     display: table;
@@ -114,15 +127,3 @@
   }
 }
 
-h3.wedding {
-  font-family: montserrat-bold;
-  color: #009999;
-  font-size: 35px;
-  text-transform: uppercase;
-  border-bottom: 2px solid #c6c6c6;
-  text-align: center;
-  width: 1122px;
-  margin: -20px auto 50px;
-  letter-spacing: 6px;
-  line-height: 80px;
-}
