--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -1378,7 +1378,7 @@ ul li {
   margin-bottom: 50px;
   margin-top: -50px;
 }
-.text-img-wrapper .b-text-img:before, .text-img-wrapper .gallery-btn-wrapper:before {
+.text-img-wrapper .b-text-img:before, .text-img-wrapper .gallery-btns-wrapper:before {
   content: '';
   width: 4000px;
   bottom: 0;
@@ -1503,11 +1503,11 @@ ul li {
 .text-img-wrapper .b-text-img.style-d p + h3 {
   margin-top: 20px;
 }
-.text-img-wrapper .gallery-btn-wrapper {
+.text-img-wrapper .gallery-btns-wrapper {
   margin: -16px auto 20px;
   width: 1000px;
 }
-.text-img-wrapper .gallery-btn-wrapper:after {
+.text-img-wrapper .gallery-btns-wrapper:after {
   content: " ";
   display: block;
   height: 0;
@@ -1515,7 +1515,7 @@ ul li {
   overflow: hidden;
   visibility: hidden;
 }
-.text-img-wrapper .gallery-btn-wrapper .btn-wrapper {
+.text-img-wrapper .gallery-btns-wrapper .btn-wrapper {
   float: left;
   margin: 0 20px 30px 20px;
 }
@@ -2895,7 +2895,7 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
   .text-img-wrapper .b-text-img.style-c .img ul .last {
     padding-left: 0px;
   }
-  .text-img-wrapper .gallery-btn-wrapper {
+  .text-img-wrapper .gallery-btns-wrapper {
     display: none;
   }
   .text-img-wrapper .form-gallery-event {
@@ -3154,7 +3154,7 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
     text-align: left;
     padding-left: 0;
   }
-  .text-img-wrapper .gallery-btn-wrapper {
+  .text-img-wrapper .gallery-btns-wrapper {
     display: none;
   }
   .text-img-wrapper .form-gallery-event {
