pravki ot Vani RadioKnopki 1

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -13,6 +13,7 @@
 @import "forms/newsletter";
 @import "forms/contact/contact";
 @import "forms/gallery-event-select";
+@import "forms/gallery-btns/gallery-btns";
 
 //layout
 @import "layout/header/header";
