--- a/scss/blocks/cols/_cols-s.scss
+++ b/scss/blocks/cols/_cols-s.scss
@@ -1,28 +1,29 @@
-.site-container {
-  /*width: 99%;*/
+.b-cols {
+  width: 100%;
 
-  .b-cols {
+  &.col-two .col{
+    width: 100%;
+  }
+
+  .col {
+    margin-right: 0px;
     width: 100%;
 
-    .col {
-      margin-right: 0px;
+    .col-item .col-cont {
       width: 100%;
 
-      .col-item .col-cont {
+      img {
         width: 100%;
-
-        img {
-          width: 100%;
-        }
       }
     }
+  }
 
-    &.style-a .col-b p {
-      width: 90%;
-    }
+  &.style-a .col-b p {
+    width: 90%;
+  }
 
-    &.col-one.style-c {
-      display: none;
-    }
+  &.col-one.style-c {
+    display: none;
   }
 }
+
